fix year selector width on mobile

--- a/app/styles/insights.css
+++ b/app/styles/insights.css
@@ -111,4 +111,8 @@
     padding:1em;
   }
 
+  .year-selector{
+    max-width:60px;
+  }
+
 }
